Updating Java version to v25.